static/style.css
body {
    background-image: url(BSB2.jpg);
    min-height : 100%;
    min-width : 100%;
    background-size: 1092px 899px;
    background-repeat:repeat;
    overflow-y: auto;
    overflow-x: hidden;
    font-family: "Trebuchet MS";
}

.sidebar{
    position:fixed;
    width:200px;
    height:100%;
    background: #3e4144;
    left:-200px;
    transition:all 200ms linear;
    z-index: 100; 
}
.sidebar a {
  width:200px;
  float: center;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
 
}
.sidebar a:hover {
  background-color: rgb(228, 228, 228);
  color: black;
}
.sidebar .tBars{
    position:absolute;
    left:230px;
    top:20px;
    cursor: pointer;

}

.sidebar .tBars span{
    display:block;
    width:30px;
    height:5px;
    background: black;
    margin: 5px 0px;
    
}
.sidebar.active {
    left:0px;
}

.searchMid
{
    max-width: 40%;
    margin: 0 auto;
    height: 100%;


}



.searchMid
{
    background-color: #FCFCFC; 
    margin: auto;
    width: 55%;
    border: 10px solid #eff0f1;
    padding: 10px;
    opacity: 0.9;        

}
.loginMid
{
    background-color: #FCFCFC; 
    margin: auto;
    width: 40%;
    border: 10px solid #eff0f1;
    padding: 10px;
    opacity: 0.9;        
}

.loginMid > h1
{
    text-align: center;
           
}



#textContainer .outline {
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: rgb(255, 255, 255);
}   

#textContainer .outline {
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: rgb(255, 255, 255);
}   

.topnav {
  overflow: hidden;
  background-color: #181761;
  font-family: "Trebuchet MS";
}

.topnav a {
  float: left;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}

.topnav a:hover {
  background-color: #ddd;
  color: black;
}

.topnav a.active {
  background-color: #7f7ee0;
  color: white;
}



.card {
  background-color: rgb(215, 219, 224);
  color: black;
  padding: .5px .5px; 
  text-align: center;
  padding-top:10px;
}
.circButtRow{
    padding-top:20px;    
    padding-bottom:20px;
}
.circButt{
    background-color: rgba(247, 128, 231, 0.856);
    border-style: solid;  
    border-radius: 50%;
    width:100px;
    height:100px;
    text-align: center;
    line-height: 90px;
    font-size:12px
}


.circButt:hover{
    background-color: rgba(244, 173, 253, 0.856)
}

.topnav-right {
  float: right;
  overflow: hidden;
  background-color: #181761;
  font-family: "Trebuchet MS";
}
/* Button used to open the survey */
.open-button {
  display: block;
  margin: auto;
  background-color: #555;
  color: white;
  padding: 16px 20px;
  border: none;
  cursor: pointer;
  opacity: 0.8;
}

.profileMid
{
    /* may make more sense for width to be px instead of */    
    max-width:40%;
    margin: 0 auto;
    background:#bdbcf3;
    height: 100%;
}
.profileMid .top{
    display:grid;
    grid-template-columns: 30% 40% 30%;
    height: 20%;
}
.profileMid .topLeft{
    padding-top:5%;
    border-style: solid;
    border-color: #3e4144;
}
.profileMid .profPic{
    
    vertical-align:middle;
    margin:auto;
    border-style:solid;
    border-radius: 50%;
    width:150px;
    max-width:150px;
    height:150px;
    max-height:150px;
}
.profileMid .topRight{
    border-style: solid;
    border-color: #3e4144; 
}

.profileMid .bot{
    display:grid;
    grid-template-columns: repeat(3, 1fr);
    height: 50%;
}



/* The popup forms - start invisible*/
.form-popup-radio {
  display: none;
  position: fixed;
  bottom: 20%;
  right: 40%;
  border: 3px solid #f1f1f1;
  z-index: 9;
}
.form-popup-button-list {
  display: none;
  position: fixed;
  bottom: 15%;
  right: 10%;
  height: 70%;
  width: 80%;
  border: 3px solid #f1f1f1;
  z-index: 9;
  overflow: auto;
}

/* Add styles to the form container */
.form-container-radio {
  width: 250px;
  padding: 10px;
  background-color: rgb(255, 255, 255);
}
.form-container-button-list {
  display:block;  
  padding: 10px;
  background-color: rgb(255, 255, 255); 
  overflow: auto; 
}

/* Set a style for the next question buttons */
.form-container-radio .btn {
  background-color: #bdbcf3;
  color: white;
  padding: 16px 20px;
  border: none;
  cursor: pointer;
  width: 100%;
  margin-bottom:10px;
  opacity: 0.8;
}
/* Set a style for the submit button */
.form-container-button-list .btn {
  background-color: #bdbcf3;
  color: white;
  width: 49.5%;
  align-items: center;
  padding: 16px 20px;
  border: none;
  cursor: pointer;
  margin-bottom:10px;
  opacity: 0.8;
}
/* Set style for flavor buttons */
.form-container-button-list .flavorBtn {
  background-color: rgb(189, 236, 182);
  color: rgb(0, 0, 0);
  padding: 16px 30px;
  border: none;
  cursor: pointer;
  margin-left: 5px;  
  margin-bottom:10px;
  opacity: 0.8;
}

/* Add a background color to the close/previous question buttons */
.form-container-radio .cancel {
  background-color: rgb(175, 175, 175);
}
.form-container-button-list .cancel {
  background-color: rgb(175, 175, 175);
}

/* Add some hover effects to buttons */
.form-container-radio .btn:hover, .open-button:hover {
  opacity: 1;
}
.form-container-button-list .flavorBtn:hover, .open-button:hover {
  opacity: 1;
}
.form-container-button-list .btn:hover, .open-button:hover {
  opacity: 1;
}


.container {
padding: 16px;
}
    
.popUpLogin {  /* The popUpLogin (background) */
display: none; /* Hidden by default */
position: fixed; 
z-index: 1; 
left: 0;
top: 0;
width: 100%; 
height: 100%; 
overflow: auto; 
background-color: rgba(0,0,0,0.4); 
padding-top: 60px;
}
    
.popUpLogin-content { 
background-color: #fefefe;
margin: 5% auto 15% auto; 
border: 1px solid #888;
width: 80%; 
}

.navbar-right{
    
float: right;
overflow: hidden;
background-color: #bdbcf3;
font-family: "Trebuchet MS";
}

.popUpCreateAccount {  /* The popUpLogin (background) */
display: none; /* Hidden by default */
position: fixed; 
z-index: 1; 
left: 0;
top: 0;
width: 100%; 
height: 100%; 
overflow: auto; 
background-color: rgba(0,0,0,0.4); 
padding-top: 60px;
}
    
.popUpCreateAccount-content { 
background-color: #fefefe;
margin: 5% auto 15% auto; 
border: 1px solid #888;
width: 80%; 
}


.item1 { grid-area: header; }
.item2 { grid-area: main; }
.item3 { grid-area: right; }
.item4 { grid-area: footer; }
.item5 { grid-area: survey; }

.grid-container {
  display: grid;
    grid-template-areas:
        'header header header header header header'
        'main main main right right right'
        'footer footer footer footer footer footer'
        'survey survey survey survey survey survey';
    grid-gap: 10px;
    background-color: #eff0f1;
    padding: 10px;
    margin: auto;
    width: 55%;
    opacity: 0.9; 
}

.grid-container > div {
    background-color: rgba(255, 255, 255, 0.8);
    text-align: left;
    padding: 10px 10px;
}

.grid-container .item1{
    text-align: center;
}
.grid-container .item5{
    text-align: center;
}

